--- a/TodoSPA/index.html
+++ b/TodoSPA/index.html
@@ -28,8 +28,9 @@
                     <li ng-class="{ active: isActive('/UserData') }"><a href="#/UserData" ng-show="userInfo.isAuthenticated">User</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="btn btn-link" ng-show="userInfo.isAuthenticated" ng-click="logout()">Logout</a></li>
-                    <li><a class="btn btn-link" ng-hide=" userInfo.isAuthenticated" ng-click="login()">Login</a></li>
+
+                    <!--TODO: Display the Login/Logout Buttons based on the user's authentication status.-->
+                
                 </ul>
             </div>
         </div>
@@ -57,8 +58,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
         <script src="https://code.angularjs.org/1.2.25/angular-route.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <script src="App/Scripts/adal.js"></script>
-        <script src="App/Scripts/adal-angular.js"></script>
+
+        <!--TODO: Load adal.js-->
+
         <script src="App/Scripts/app.js"></script>
         <script src="App/Scripts/homeCtrl.js"></script>
         <script src="App/Scripts/userDataCtrl.js"></script>
